# MinesweeperPlusPlus

./: CMakeLists.txt  Makefile  conanfile.txt  requirements.txt
doc/: CellsVector2D - porównanie możliwych rozwiązań.txt  Wygląd menu.txt
notes/: CellsVector2D.txt  Menu.txt  Wygląd menu.txt
src/: Game.cpp  Game.hpp
src/GameLogic/: Cell.cpp  Cell.hpp  CellsVector2D.cpp  CellsVector2D.hpp  HighScores.cpp  HighScores.hpp  Highscores.hpp  Minefield.cpp  Minefield.hpp  MinefieldClassic.cpp  MinefieldClassic.hpp  MinefieldData.cpp  MinefieldData.hpp  MinefieldHex.cpp  MinefieldHex.hpp  MinefieldNonclassic.cpp  MinefieldNonclassic.hpp  MinefieldTri.cpp  MinefieldTri.hpp  Options.cpp  Options.hpp  SaveManager.cpp  SaveManager.hpp  SecondsMeter.cpp  SecondsMeter.hpp
src/GameStates/: GameOverScreen.cpp  GameOverScreen.hpp  GameState.cpp  GameState.hpp  MenuScreen.cpp  MenuScreen.hpp  OptionsScreen.cpp  OptionsScreen.hpp  PlayScreen.cpp  PlayScreen.hpp
src/Graphics/: BackButton.cpp  BackButton.hpp  ButtonText.cpp  ButtonText.hpp  DrawingMinefield.cpp  DrawingMinefield.hpp  DrawingMinefieldClassic.cpp  DrawingMinefieldClassic.hpp  ExtendedText.cpp  ExtendedText.hpp  MouseoverText.cpp  MouseoverText.hpp  NextChoiceButton.cpp  NextChoiceButton.hpp  PreviousChoiceButton.cpp  PreviousChoiceButton.hpp  Title.cpp  Title.hpp
src/HelperFunctions/: BinaryFiles.cpp  BinaryFiles.hpp
src/HelperSrc/: BinaryFiles.hpp  GameConstants.hpp
tests/MinefieldClassic/: MinefieldClassicTest.cpp
tests/MinefieldClassicAuto/: MinefieldClassicAutoTest.cpp
tests/TextGraphics/: TextGraphics.cpp
(+2 files in other folders)
